--- a/pages/about.html
+++ b/pages/about.html
@@ -4,65 +4,171 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/pages-styles/about.css">
-    <title>About Us</title>
+    <link rel="stylesheet" href="../pages-styles/about.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <title>About</title>
 </head>
 <body>
-    <nav class="nav-wrapper">
-        <div class="nav-wrapper">
-            <img src="/pages/images/navlogo.png" alt="logo">
-        </div>
-        <div class="nav-wrapper">
-            <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Shop</a></li>
-                <li><a href="">Arrival</a></li>
-            </ul>
-        </div>
-        <div class="nav-wrapper">
-            <div class="cart-icon">
-                <p>cart</p>
-            </div>
+    <nav class="navbar navbar-expand-lg">
+        <div class="container align-items-center ">
+                <div>
+                    <a class="navbar-brand" href="#">
+                        <img src="../pages/images/navlogo.png" alt="logo">
+                    </a>
+                </div> 
+                <div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon">clickme</span>
+                    </button>
+                </div>  
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item ms-2 d-none d-lg-inline">
+                            <a class="nav-link "> 
+                                <img src="" alt="cart">
+                            </a>
+                        </li>
+                    </ul>
+                </div>
         </div>
     </nav>
     <section class="coverfeet-wrapper">
-        <div class="coverfeet-img-wrapper">
-            <div class="img-wrapper">
-                <img src="/pages/images/aboutpagemainimg.png" alt="about-image">
+            <div class="coverfeet-img-wrapper container">
+                <div class="img-wrapper">
+                    <img src="../pages/images/aboutpagemainimg.png" alt="about-image">
+                </div>
+                <div class="paragraph-wrapper">
+                    <p>Step into style with our shoes - buy now!
+                        Experience the difference in quality with our products</p>
+                </div>
             </div>
-            <div class="paragraph-wrapper">
-                <p>Step into style with our shoes - buy now!
-                    Experience the difference in quality with our products</p>
+    </section>
+    <section class="office container">
+        <div class="office-heading row">
+            <h3 class="col-sm-auto col-md-5">Visit our our office near at manila bay.</h3>
+            <p class=" col-sm-auto col-md-6">The creation and launch of an e-commerce website for an online shoe store is a crucial aspect of this project. </p>
+        </div>
+        <div class="office-images row justify-content-center align-items-center">
+            <img class="office-sizes col-sm-auto col-md-4" src="../pages/images/girlsoffice.png" alt="">
+            <img class="office-sizes col-sm-auto col-md-4" src="../pages/images/meeting.png" alt="">
+            <img class="office-sizes col-sm-auto col-md-4" src="../pages/images/ligtheroffice.png" alt="">
+        </div>
+        <button class="sub-main-btn">Learn more</button>
+        <section class="favorites row">
+            <div class="favorites-wrapper col-sm-auto  col-md-3 ">
+                <img src="../pages/images/icons/shopping_bag_FILL1_wght500_GRAD0_opsz48 1.png" alt="">
+                <h3>Shopping</h3>
+                <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
+            </div>
+            <div class="favorites-wrapper col-sm-auto  col-md-3  ">
+                <img src="../pages/images/icons/local_mall_FILL1_wght500_GRAD0_opsz48 1.png" alt="">
+                <h3>Local Store</h3>
+                <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
+            </div>
+            <div class="favorites-wrapper col-sm-auto  col-md-3  ">
+                <img src="../pages/images/icons/favorite_FILL1_wght500_GRAD0_opsz48 1.png" alt="">
+                <h3>Favourites</h3>
+                <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
+            </div>
+            <div class="favorites-wrapper col-sm-auto  col-md-3  ">
+                <img src="../pages/images/icons/savings_FILL1_wght500_GRAD0_opsz48 1.png" alt="">
+                <h3>Saving</h3>
+                <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
+            </div>
+        </section>
+    </section>
+    <section class="sponsors">
+        <div class="sponsors-logos container ">
+            <div class="row justify-content-center align-items-center">
+            <img class="col-sm w-auto col-md-auto" src="../pages/images/kode.png" alt="kodego">
+            <img class="col-sm w-auto col-md-auto" src="../pages/images/GCash_Horizontal-Full-Blue-Transparent 1.png" alt="gcash">
+            <img class="col-sm w-auto col-md-auto" src="../pages/images/PayMaya_Logo 1.png" alt="paymaya">
+            <img class="col-sm w-auto col-md-auto" src="../pages/images/jollibee-logo-footer-2x 1.png" alt="jollibee">
+            <img class="col-sm w-auto col-md-auto" src="../pages/images/Grab_Final_Master_Logo_2021_RGB_(green) 1.png" alt="grab">
+            <img class="col-sm w-auto col-md-auto" src="../pages/images/Sangguniang_Kabataan_logo 1.png" alt="sk">
             </div>
         </div>
     </section>
-    <section class="dont-miss-wrapper">
-        <div class="dont-content-wrapper">
-            <div class="left-wrapper">
-                <div class="upper-wrapper">
-                    <h3>Don't miss out on this opportunity</h3>
-                </div>
-                <div class="lower-wrapper">
-                    <div class="lower-img-wrapper">
-                        <img src="/pages/images/rainbowsmile.png" alt="smile">
-                    </div>
-                    <div class="lower-img-wrapper">
-                        <h4>Step into style with our shoes - buy now!
-                            Experience the difference in quality with our products
-                        </h4>
-                        <p>High-quality materials: Air Jordan shoes are typically made with premium leather and other durable materials to ensure they last a long time and provide good support.</p>
-                        <button class="main-btn">Buy now</button>
-                        <button class="sub-main-btn">Learn more</button>
-                    </div>
-                </div>
+    <section class="developers container">
+        <div class="developers-wrappers-heading">
+            <h2>Developers</h2>
+            <p class="sub-text">Step into style with our shoes - buy now!
+                Experience the difference in quality with our products.
+            </p>
+        </div>
+        <div class="developers-wrappers row">
+            <div class="developers-img col-sm-auto col-md-6 ">
+                <img class="dimg" src="../pages/images/blackwithhat.png" alt="">
             </div>
-            <div class="right-wrapper">
-                <div class="right-img-wrapper">
-                    <img src="/pages/images/readinghappy.png" alt="reading-happy">
+            <div class="developers-details col-sm-auto col-md-6">
+                <h3>Alcantara Keilsun B.</h3>
+                <p class="description">“A  goal oriented person who always want something more  to something he already know, he tends to  go beyond the unknown,  for some people is terrifying but for him it is the most exciting part of knowing something.”</p>
+                <div class="profile-icons">
+                    <span><img src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
+                    <span><img src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
+                    <span><img src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
+                    <span><img src="../pages/images/rediit.png" alt=""></span>
+                    <span><img src="../pages/images/tiwtter.png" alt=""></span>
                 </div>
+                <button class="main-btn">Buy now</button>
+            </div>
+        </div>
+        <div class="developers-wrappers row">
+            <div class="developers-img col-sm-auto col-md-6">
+                <img class="dimg" src="..//pages/images/whitewithglass.png" alt="">
+            </div>
+            <div class="developers-details col-sm-auto col-md-6">
+                <h3>Jovanie Ronda</h3>
+                <p>“A  goal oriented person who always want something more  to something he already know, he tends to  go beyond the unknown,  for some people is terrifying but for him it is the most exciting part of knowing something.”</p>
+                <div class="profile-icons">
+                    <span><img src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
+                    <span><img src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
+                    <span><img src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
+                    <span><img src="../pages/images/rediit.png" alt=""></span>
+                    <span><img src="../pages/images/tiwtter.png" alt=""></span>
+                </div>
+                <button class="main-btn">Buy now</button>
             </div>
         </div>
     </section>
+    <section class="email-us container ">
+        <div class="row align-items-center">
+        <div class="email-input col-sm-auto col-md-6">
+            <h2>Don't miss out on this opportunity</h2>
+            <p class="sub-text">Reach out for more information and lets talk  for more  details and inquiries.  </p>
+            <div class="input-wrapper">
+                <input type="text"><button class="email-btn">Email Us</button>
+            </div>
+           
+        </div>
+        <div class="email-input col-sm-auto col-md-6">
+            <img src="../pages/images/aboutpagemainimg.png" alt="email-main-image">
+        </div>
+        </div>
+    </section>
+    <footer>
+        <div class="footer container">
+            <img  class="footer-img" src="../pages/images/navlogo.png" alt="">
+            <p>Copyright © 2023 CoverFeetAssociation, CoverFeet.org</p>
+            <div class="profile-icons-footer">
+                <span><img class="footer-socials" src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
+                <span><img class="footer-social" src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
+                <span><img class="footer-social" src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
+                <span><img class="footer-social" src="../pages/images/rediit.png" alt=""></span>
+                <span><img class="footer-social" src="../pages/images/tiwtter.png" alt=""></span>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
