updated source code

--- a/pages/about.html
+++ b/pages/about.html
@@ -11,11 +11,11 @@
     <title>About</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-md">
         <div class="container align-items-center ">
                 <div>
                     <a class="navbar-brand" href="#">
-                        <img src="../pages/images/navlogo.png" alt="logo">
+                        <img src="../pages/images/navlogo.png" alt="logo" class="img-responsive">
                     </a>
                 </div> 
                 <div>
@@ -46,7 +46,7 @@
     <section class="coverfeet-wrapper">
             <div class="coverfeet-img-wrapper container">
                 <div class="img-wrapper">
-                    <img src="../pages/images/aboutpagemainimg.png" alt="about-image">
+                    <img src="../pages/images/aboutpagemainimg.png" alt="about-image" class="img-fluid">
                 </div>
                 <div class="paragraph-wrapper">
                     <p>Step into style with our shoes - buy now!
@@ -60,29 +60,29 @@
             <p class=" col-sm-auto col-md-6">The creation and launch of an e-commerce website for an online shoe store is a crucial aspect of this project. </p>
         </div>
         <div class="office-images row justify-content-center align-items-center">
-            <img class="office-sizes col-sm-auto col-md-4" src="../pages/images/girlsoffice.png" alt="">
-            <img class="office-sizes col-sm-auto col-md-4" src="../pages/images/meeting.png" alt="">
-            <img class="office-sizes col-sm-auto col-md-4" src="../pages/images/ligtheroffice.png" alt="">
+            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="../pages/images/girlsoffice.png" alt="">
+            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="../pages/images/meeting.png" alt="">
+            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="../pages/images/ligtheroffice.png" alt="">
         </div>
         <button class="sub-main-btn">Learn more</button>
         <section class="favorites row">
             <div class="favorites-wrapper col-sm-auto  col-md-3 ">
-                <img src="../pages/images/icons/shopping_bag_FILL1_wght500_GRAD0_opsz48 1.png" alt="">
+                <img src="../pages/images/icons/shopping_bag_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
                 <h3>Shopping</h3>
                 <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
             </div>
             <div class="favorites-wrapper col-sm-auto  col-md-3  ">
-                <img src="../pages/images/icons/local_mall_FILL1_wght500_GRAD0_opsz48 1.png" alt="">
+                <img src="../pages/images/icons/local_mall_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
                 <h3>Local Store</h3>
                 <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
             </div>
             <div class="favorites-wrapper col-sm-auto  col-md-3  ">
-                <img src="../pages/images/icons/favorite_FILL1_wght500_GRAD0_opsz48 1.png" alt="">
+                <img src="../pages/images/icons/favorite_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
                 <h3>Favourites</h3>
                 <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
             </div>
             <div class="favorites-wrapper col-sm-auto  col-md-3  ">
-                <img src="../pages/images/icons/savings_FILL1_wght500_GRAD0_opsz48 1.png" alt="">
+                <img src="../pages/images/icons/savings_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
                 <h3>Saving</h3>
                 <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
             </div>
@@ -109,7 +109,7 @@
         </div>
         <div class="developers-wrappers row">
             <div class="developers-img col-sm-auto col-md-6 ">
-                <img class="dimg" src="../pages/images/blackwithhat.png" alt="">
+                <img class="dimg img-fluid" src="../pages/images/blackwithhat.png" alt="">
             </div>
             <div class="developers-details col-sm-auto col-md-6">
                 <h3>Alcantara Keilsun B.</h3>
@@ -126,7 +126,7 @@
         </div>
         <div class="developers-wrappers row">
             <div class="developers-img col-sm-auto col-md-6">
-                <img class="dimg" src="..//pages/images/whitewithglass.png" alt="">
+                <img class="dimg img-fluid" src="..//pages/images/whitewithglass.png" alt="">
             </div>
             <div class="developers-details col-sm-auto col-md-6">
                 <h3>Jovanie Ronda</h3>
@@ -143,18 +143,18 @@
         </div>
     </section>
     <section class="email-us container ">
-        <div class="row align-items-center">
-        <div class="email-input col-sm-auto col-md-6">
-            <h2>Don't miss out on this opportunity</h2>
-            <p class="sub-text">Reach out for more information and lets talk  for more  details and inquiries.  </p>
-            <div class="input-wrapper">
-                <input type="text"><button class="email-btn">Email Us</button>
+        <div class="row">
+            <div class="email-input col-sm-auto col-md-6">
+                <h2>Don't miss out on this opportunity</h2>
+                <p class="sub-text">Reach out for more information and lets talk  for more  details and inquiries.  </p>
+                <div class="input-wrapper">
+                    <input type="text"><button class="email-btn">Email Us</button>
+                </div>
+            
             </div>
-           
-        </div>
-        <div class="email-input col-sm-auto col-md-6">
-            <img src="../pages/images/aboutpagemainimg.png" alt="email-main-image">
-        </div>
+            <div class="email-input col-sm-auto col-md-6">
+                <img class="img-fluid" src="../pages/images/aboutpagemainimg.png" alt="email-main-image" >
+            </div>
         </div>
     </section>
     <footer>
@@ -162,11 +162,11 @@
             <img  class="footer-img" src="../pages/images/navlogo.png" alt="">
             <p>Copyright © 2023 CoverFeetAssociation, CoverFeet.org</p>
             <div class="profile-icons-footer">
-                <span><img class="footer-socials" src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
-                <span><img class="footer-social" src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
-                <span><img class="footer-social" src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
-                <span><img class="footer-social" src="../pages/images/rediit.png" alt=""></span>
-                <span><img class="footer-social" src="../pages/images/tiwtter.png" alt=""></span>
+                <span><img class="footer-socials img-fluid" src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
+                <span><img class="footer-social img-fluid" src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
+                <span><img class="footer-social img-fluid" src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
+                <span><img class="footer-social img-fluid" src="../pages/images/rediit.png" alt=""></span>
+                <span><img class="footer-social img-fluid" src="../pages/images/tiwtter.png" alt=""></span>
             </div>
         </div>
     </footer>
