--- a/pages/about.html
+++ b/pages/about.html
@@ -43,7 +43,7 @@
                 </div>
         </div>
     </nav>
-    <section class="coverfeet-wrapper">
+    <div class="coverfeet-wrapper">
             <div class="coverfeet-img-wrapper container">
                 <div class="img-wrapper">
                     <img src="../pages/images/aboutpagemainimg.png" alt="about-image" class="img-fluid">
@@ -53,8 +53,8 @@
                         Experience the difference in quality with our products</p>
                 </div>
             </div>
-    </section>
-    <section class="office container">
+    </div>
+    <div class="office container">
         <div class="office-heading row">
             <h3 class="col-sm-auto col-md-5">Visit our our office near at manila bay.</h3>
             <p class=" col-sm-auto col-md-6">The creation and launch of an e-commerce website for an online shoe store is a crucial aspect of this project. </p>
@@ -87,8 +87,8 @@
                 <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
             </div>
         </section>
-    </section>
-    <section class="sponsors">
+    </div>
+    <div class="sponsors">
         <div class="sponsors-logos container ">
             <div class="row justify-content-center align-items-center">
             <img class="col-sm w-auto col-md-auto" src="../pages/images/kode.png" alt="kodego">
@@ -99,8 +99,8 @@
             <img class="col-sm w-auto col-md-auto" src="../pages/images/Sangguniang_Kabataan_logo 1.png" alt="sk">
             </div>
         </div>
-    </section>
-    <section class="developers container">
+    </div>
+    <div class="developers container">
         <div class="developers-wrappers-heading">
             <h2>Developers</h2>
             <p class="sub-text">Step into style with our shoes - buy now!
@@ -141,8 +141,8 @@
                 <button class="main-btn">Buy now</button>
             </div>
         </div>
-    </section>
-    <section class="email-us container ">
+    </div>
+    <div class="email-us container ">
         <div class="row">
             <div class="email-input col-sm-auto col-md-6">
                 <h2>Don't miss out on this opportunity</h2>
@@ -156,8 +156,8 @@
                 <img class="img-fluid" src="../pages/images/aboutpagemainimg.png" alt="email-main-image" >
             </div>
         </div>
-    </section>
-    <footer>
+    </div>
+    <div>
         <div class="footer container">
             <img  class="footer-img" src="../pages/images/navlogo.png" alt="">
             <p>Copyright © 2023 CoverFeetAssociation, CoverFeet.org</p>
@@ -169,6 +169,6 @@
                 <span><img class="footer-social img-fluid" src="../pages/images/tiwtter.png" alt=""></span>
             </div>
         </div>
-    </footer>
+    <div>
 </body>
 </html>
