finished the mobile and the desktop viewport

--- a/pages/about.html
+++ b/pages/about.html
@@ -11,16 +11,16 @@
     <title>About</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-md">
+    <nav class="navbar navbar-expand-lg">
         <div class="container align-items-center ">
                 <div>
                     <a class="navbar-brand" href="#">
-                        <img src="../pages/images/navlogo.png" alt="logo" class="img-responsive">
+                        <img src="../pages/images/navlogo.png" alt="logo" class="nav-logo">
                     </a>
                 </div> 
                 <div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon">clickme</span>
+                    <span class="navbar-toggler-icon"><img src="../pages/images/icons/Vector.png" alt="" class="burger"></span>
                     </button>
                 </div>  
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -36,7 +36,7 @@
                         </li>
                         <li class="nav-item ms-2 d-none d-lg-inline">
                             <a class="nav-link "> 
-                                <img src="" alt="cart">
+                                <img src="../pages/images/carticon.png" alt="cart">
                             </a>
                         </li>
                     </ul>
@@ -45,19 +45,42 @@
     </nav>
     <div class="coverfeet-wrapper">
             <div class="coverfeet-img-wrapper container">
-                <div class="img-wrapper">
-                    <img src="../pages/images/aboutpagemainimg.png" alt="about-image" class="img-fluid">
-                </div>
-                <div class="paragraph-wrapper">
-                    <p>Step into style with our shoes - buy now!
-                        Experience the difference in quality with our products</p>
+                <div class="row justify-content-center">
+                    <div class="img-wrapper col-sm col-md-auto">
+                        <img src="../pages/images/aboutpagemainimg.png" alt="about-image" class="main-img img-fluid">
+                    </div>
+                    <div class="paragraph-wrapper col-sm col-md-12 align-items-center">
+                        <p>Step into style with our shoes - buy now! Experience the difference in quality with our products</p>
+                    </div>
+                    <div class="shoes col-sm col-md-12 align-items-center row justify-content-center">
+                        <img src="../pages/images/Caramelshoe.png" alt="" class="col-sm-1 col-md-auto  img-fluid shoes-inline">
+                        <img src="../pages/images/Girlsshoes.png" alt="" class="col-sm-1 col-md-auto  img-fluid shoes-inline">
+                        <img src="../pages/images/aIR MAX white blue.png" alt="" class="col-sm-1 col-md-auto  img-fluid shoes-inline">
+                    </div>
                 </div>
             </div>
+    </div>
+    <div class="dont-miss container-xxl">
+        <div class="row justify-content-center">
+            <div class="col-sm col-md-4 upper-image">
+                <img src="../pages/images/rainbowsmile.png" alt="">
+            </div>
+            <div class="col-sm col-md-4 pt-5 mid">
+                <h2>Don't miss out on this opportunity</h2>
+                <h4>Step into style with our shoes - buy now! Experience the difference in quality with our products</h4>
+                <p>High-quality materials: Air Jordan shoes are typically made with premium leather and other durable materials to ensure they last a long time and provide good support.</p>
+                <button class="main-btn">About us</button>
+                <button class="sub-main-btn">Learn more</button>
+            </div>
+            <div class="col-sm col-md-4 image-wrapper-dont">
+                <img src="../pages/images/readinghappy.png" alt="">
+            </div>
+        </div>
     </div>
     <div class="office container">
         <div class="office-heading row">
             <h3 class="col-sm-auto col-md-5">Visit our our office near at manila bay.</h3>
-            <p class=" col-sm-auto col-md-6">The creation and launch of an e-commerce website for an online shoe store is a crucial aspect of this project. </p>
+            <p class="office-text col-sm-auto col-md-6 ">The creation and launch of an e-commerce website for an online shoe store is a crucial aspect of this project. </p>
         </div>
         <div class="office-images row justify-content-center align-items-center">
             <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="../pages/images/girlsoffice.png" alt="">
@@ -65,7 +88,7 @@
             <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="../pages/images/ligtheroffice.png" alt="">
         </div>
         <button class="sub-main-btn">Learn more</button>
-        <section class="favorites row">
+        <div class="favorites row">
             <div class="favorites-wrapper col-sm-auto  col-md-3 ">
                 <img src="../pages/images/icons/shopping_bag_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
                 <h3>Shopping</h3>
@@ -86,11 +109,11 @@
                 <h3>Saving</h3>
                 <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
             </div>
-        </section>
+        </div>
     </div>
     <div class="sponsors">
         <div class="sponsors-logos container ">
-            <div class="row justify-content-center align-items-center">
+            <div class="logos-sponsor row justify-content-center align-items-center">
             <img class="col-sm w-auto col-md-auto" src="../pages/images/kode.png" alt="kodego">
             <img class="col-sm w-auto col-md-auto" src="../pages/images/GCash_Horizontal-Full-Blue-Transparent 1.png" alt="gcash">
             <img class="col-sm w-auto col-md-auto" src="../pages/images/PayMaya_Logo 1.png" alt="paymaya">
@@ -107,7 +130,7 @@
                 Experience the difference in quality with our products.
             </p>
         </div>
-        <div class="developers-wrappers row">
+        <div class="developers-wrappers  row">
             <div class="developers-img col-sm-auto col-md-6 ">
                 <img class="dimg img-fluid" src="../pages/images/blackwithhat.png" alt="">
             </div>
@@ -115,11 +138,11 @@
                 <h3>Alcantara Keilsun B.</h3>
                 <p class="description">“A  goal oriented person who always want something more  to something he already know, he tends to  go beyond the unknown,  for some people is terrifying but for him it is the most exciting part of knowing something.”</p>
                 <div class="profile-icons">
-                    <span><img src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
-                    <span><img src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
-                    <span><img src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
-                    <span><img src="../pages/images/rediit.png" alt=""></span>
-                    <span><img src="../pages/images/tiwtter.png" alt=""></span>
+                    <span><img class="pro-icons" src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
+                    <span><img class="pro-icons" src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
+                    <span><img class="pro-icons" src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
+                    <span><img class="pro-icons" src="../pages/images/rediit.png" alt=""></span>
+                    <span><img class="pro-icons" src="../pages/images/tiwtter.png" alt=""></span>
                 </div>
                 <button class="main-btn">Buy now</button>
             </div>
@@ -132,35 +155,36 @@
                 <h3>Jovanie Ronda</h3>
                 <p>“A  goal oriented person who always want something more  to something he already know, he tends to  go beyond the unknown,  for some people is terrifying but for him it is the most exciting part of knowing something.”</p>
                 <div class="profile-icons">
-                    <span><img src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
-                    <span><img src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
-                    <span><img src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
-                    <span><img src="../pages/images/rediit.png" alt=""></span>
-                    <span><img src="../pages/images/tiwtter.png" alt=""></span>
+                    <span><img class="pro-icons"src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
+                    <span><img class="pro-icons"src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
+                    <span><img class="pro-icons"src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
+                    <span><img class="pro-icons"src="../pages/images/rediit.png" alt=""></span>
+                    <span><img class="pro-icons"src="../pages/images/tiwtter.png" alt=""></span>
                 </div>
                 <button class="main-btn">Buy now</button>
             </div>
         </div>
     </div>
-    <div class="email-us container ">
+    <div class="email-us container">
         <div class="row">
-            <div class="email-input col-sm-auto col-md-6">
-                <h2>Don't miss out on this opportunity</h2>
-                <p class="sub-text">Reach out for more information and lets talk  for more  details and inquiries.  </p>
-                <div class="input-wrapper">
-                    <input type="text"><button class="email-btn">Email Us</button>
+            <div class="col-sm-auto col-md-6">
+                <div class="email-form">
+                    <h3>Don't miss out on this opportunity</h3>
+                    <p class="sub-heading">Reach out for more information and lets talk  for more  details and inquiries.  </p>
+                   <form action="submit" class="row form">
+                        <input type="email" class="col-sm col-md-8 form-input">
+                        <button class="col-sm col-md-4 form-btn">clickme</button>
+                   </form>
                 </div>
-            
             </div>
-            <div class="email-input col-sm-auto col-md-6">
-                <img class="img-fluid" src="../pages/images/aboutpagemainimg.png" alt="email-main-image" >
+            <div class="col-sm-auto col-md-6">
+                <img class="main-img img-fluid" src="../pages/images/aboutpagemainimg.png" alt="email-main-image" >
             </div>
         </div>
     </div>
-    <div>
-        <div class="footer container">
+    <div class="footer container">
             <img  class="footer-img" src="../pages/images/navlogo.png" alt="">
-            <p>Copyright © 2023 CoverFeetAssociation, CoverFeet.org</p>
+            <p class="block">Copyright © 2023 CoverFeetAssociation, CoverFeet.org</p>
             <div class="profile-icons-footer">
                 <span><img class="footer-socials img-fluid" src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
                 <span><img class="footer-social img-fluid" src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
@@ -168,7 +192,7 @@
                 <span><img class="footer-social img-fluid" src="../pages/images/rediit.png" alt=""></span>
                 <span><img class="footer-social img-fluid" src="../pages/images/tiwtter.png" alt=""></span>
             </div>
-        </div>
-    <div>
+            <p class="hide">Copyright © 2023 CoverFeetAssociation, CoverFeet.org</p>
+    </div> 
 </body>
 </html>
