--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../pages-styles/about.css">
+    <link rel="stylesheet" href="./pages-styles/about.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -15,28 +15,28 @@
         <div class="container align-items-center ">
                 <div>
                     <a class="navbar-brand" href="#">
-                        <img src="../pages/images/navlogo.png" alt="logo" class="nav-logo">
+                        <img src="./pages/images/navlogo.png" alt="logo" class="nav-logo">
                     </a>
                 </div> 
                 <div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"><img src="../pages/images/icons/Vector.png" alt="" class="burger"></span>
+                    <span class="navbar-toggler-icon"><img src="./pages/images/icons/Vector.png" alt="" class="burger"></span>
                     </button>
                 </div>  
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Home</a>
+                            <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                            <a class="nav-link" href="arrival.html">Arrivals</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
+                            <a class="nav-link" href="shop.html">Shop</a>
                         </li>
                         <li class="nav-item ms-2 d-none d-lg-inline">
                             <a class="nav-link "> 
-                                <img src="../pages/images/carticon.png" alt="cart">
+                                <img src="./pages/images/carticon.png" alt="cart">
                             </a>
                         </li>
                     </ul>
@@ -47,15 +47,15 @@
             <div class="coverfeet-img-wrapper container">
                 <div class="row justify-content-center">
                     <div class="img-wrapper col-sm col-md-auto">
-                        <img src="../pages/images/aboutpagemainimg.png" alt="about-image" class="main-img img-fluid">
+                        <img src="./pages/images/aboutpagemainimg.png" alt="about-image" class="main-img img-fluid">
                     </div>
                     <div class="paragraph-wrapper col-sm col-md-12 align-items-center">
                         <p>Step into style with our shoes - buy now! Experience the difference in quality with our products</p>
                     </div>
                     <div class="shoes col-sm col-md-12 align-items-center row justify-content-center">
-                        <img src="../pages/images/Caramelshoe.png" alt="" class="col-sm-1 col-md-auto  img-fluid shoes-inline">
-                        <img src="../pages/images/Girlsshoes.png" alt="" class="col-sm-1 col-md-auto  img-fluid shoes-inline">
-                        <img src="../pages/images/aIR MAX white blue.png" alt="" class="col-sm-1 col-md-auto  img-fluid shoes-inline">
+                        <img src="./pages/images/Caramelshoe.png" alt="" class="col-sm-1 col-md-auto  img-fluid shoes-inline">
+                        <img src="./pages/images/Girlsshoes.png" alt="" class="col-sm-1 col-md-auto  img-fluid shoes-inline">
+                        <img src="./pages/images/aIR MAX white blue.png" alt="" class="col-sm-1 col-md-auto  img-fluid shoes-inline">
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
     <div class="dont-miss container-xxl">
         <div class="row justify-content-center">
             <div class="col-sm col-md-4 upper-image">
-                <img src="../pages/images/rainbowsmile.png" alt="">
+                <img src="./pages/images/rainbowsmile.png" alt="">
             </div>
             <div class="col-sm col-md-4 pt-5 mid">
                 <h2>Don't miss out on this opportunity</h2>
@@ -73,7 +73,7 @@
                 <button class="sub-main-btn">Learn more</button>
             </div>
             <div class="col-sm col-md-4 image-wrapper-dont">
-                <img src="../pages/images/readinghappy.png" alt="">
+                <img src="./pages/images/readinghappy.png" alt="">
             </div>
         </div>
     </div>
@@ -83,29 +83,29 @@
             <p class="office-text col-sm-auto col-md-6 ">The creation and launch of an e-commerce website for an online shoe store is a crucial aspect of this project. </p>
         </div>
         <div class="office-images row justify-content-center align-items-center">
-            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="../pages/images/girlsoffice.png" alt="">
-            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="../pages/images/meeting.png" alt="">
-            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="../pages/images/ligtheroffice.png" alt="">
+            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="./pages/images/girlsoffice.png" alt="">
+            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="./pages/images/meeting.png" alt="">
+            <img class="office-sizes col-sm-auto col-md-4  img-fluid " src="./pages/images/ligtheroffice.png" alt="">
         </div>
         <button class="sub-main-btn">Learn more</button>
         <div class="favorites row">
             <div class="favorites-wrapper col-sm-auto  col-md-3 ">
-                <img src="../pages/images/icons/shopping_bag_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
+                <img src="./pages/images/icons/shopping_bag_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
                 <h3>Shopping</h3>
                 <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
             </div>
             <div class="favorites-wrapper col-sm-auto  col-md-3  ">
-                <img src="../pages/images/icons/local_mall_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
+                <img src="./pages/images/icons/local_mall_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
                 <h3>Local Store</h3>
                 <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
             </div>
             <div class="favorites-wrapper col-sm-auto  col-md-3  ">
-                <img src="../pages/images/icons/favorite_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
+                <img src="./pages/images/icons/favorite_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
                 <h3>Favourites</h3>
                 <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
             </div>
             <div class="favorites-wrapper col-sm-auto  col-md-3  ">
-                <img src="../pages/images/icons/savings_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
+                <img src="./pages/images/icons/savings_FILL1_wght500_GRAD0_opsz48 1.png" alt="" class="img-fluid">
                 <h3>Saving</h3>
                 <p class="description">Classic design: The shoe features a classic design that is inspired by the original Blazer Mid from 1977 and includes</p>
             </div>
@@ -114,12 +114,12 @@
     <div class="sponsors">
         <div class="sponsors-logos container ">
             <div class="logos-sponsor row justify-content-center align-items-center">
-            <img class="col-sm w-auto col-md-auto" src="../pages/images/kode.png" alt="kodego">
-            <img class="col-sm w-auto col-md-auto" src="../pages/images/GCash_Horizontal-Full-Blue-Transparent 1.png" alt="gcash">
-            <img class="col-sm w-auto col-md-auto" src="../pages/images/PayMaya_Logo 1.png" alt="paymaya">
-            <img class="col-sm w-auto col-md-auto" src="../pages/images/jollibee-logo-footer-2x 1.png" alt="jollibee">
-            <img class="col-sm w-auto col-md-auto" src="../pages/images/Grab_Final_Master_Logo_2021_RGB_(green) 1.png" alt="grab">
-            <img class="col-sm w-auto col-md-auto" src="../pages/images/Sangguniang_Kabataan_logo 1.png" alt="sk">
+            <img class="col-sm w-auto col-md-auto" src="./pages/images/kode.png" alt="kodego">
+            <img class="col-sm w-auto col-md-auto" src="./pages/images/GCash_Horizontal-Full-Blue-Transparent 1.png" alt="gcash">
+            <img class="col-sm w-auto col-md-auto" src="./pages/images/PayMaya_Logo 1.png" alt="paymaya">
+            <img class="col-sm w-auto col-md-auto" src="./pages/images/jollibee-logo-footer-2x 1.png" alt="jollibee">
+            <img class="col-sm w-auto col-md-auto" src="./pages/images/Grab_Final_Master_Logo_2021_RGB_(green) 1.png" alt="grab">
+            <img class="col-sm w-auto col-md-auto" src="./pages/images/Sangguniang_Kabataan_logo 1.png" alt="sk">
             </div>
         </div>
     </div>
@@ -132,34 +132,34 @@
         </div>
         <div class="developers-wrappers  row">
             <div class="developers-img col-sm-auto col-md-6 ">
-                <img class="dimg img-fluid" src="../pages/images/blackwithhat.png" alt="">
+                <img class="dimg img-fluid" src="./pages/images/blackwithhat.png" alt="">
             </div>
             <div class="developers-details col-sm-auto col-md-6">
                 <h3>Alcantara Keilsun B.</h3>
                 <p class="description">“A  goal oriented person who always want something more  to something he already know, he tends to  go beyond the unknown,  for some people is terrifying but for him it is the most exciting part of knowing something.”</p>
                 <div class="profile-icons">
-                    <span><img class="pro-icons" src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
-                    <span><img class="pro-icons" src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
-                    <span><img class="pro-icons" src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
-                    <span><img class="pro-icons" src="../pages/images/rediit.png" alt=""></span>
-                    <span><img class="pro-icons" src="../pages/images/tiwtter.png" alt=""></span>
+                    <span><img class="pro-icons" src="./pages/images/Gmail_Logo_512px 1.png" alt=""></span>
+                    <span><img class="pro-icons" src="./pages/images/640px-Instagram_icon 1.png" alt=""></span>
+                    <span><img class="pro-icons" src="./pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
+                    <span><img class="pro-icons" src="./pages/images/rediit.png" alt=""></span>
+                    <span><img class="pro-icons" src="./pages/images/tiwtter.png" alt=""></span>
                 </div>
                 <button class="main-btn">Buy now</button>
             </div>
         </div>
         <div class="developers-wrappers row">
             <div class="developers-img col-sm-auto col-md-6">
-                <img class="dimg img-fluid" src="..//pages/images/whitewithglass.png" alt="">
+                <img class="dimg img-fluid" src=".//pages/images/whitewithglass.png" alt="">
             </div>
             <div class="developers-details col-sm-auto col-md-6">
                 <h3>Jovanie Ronda</h3>
                 <p>“A  goal oriented person who always want something more  to something he already know, he tends to  go beyond the unknown,  for some people is terrifying but for him it is the most exciting part of knowing something.”</p>
                 <div class="profile-icons">
-                    <span><img class="pro-icons"src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
-                    <span><img class="pro-icons"src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
-                    <span><img class="pro-icons"src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
-                    <span><img class="pro-icons"src="../pages/images/rediit.png" alt=""></span>
-                    <span><img class="pro-icons"src="../pages/images/tiwtter.png" alt=""></span>
+                    <span><img class="pro-icons"src="./pages/images/Gmail_Logo_512px 1.png" alt=""></span>
+                    <span><img class="pro-icons"src="./pages/images/640px-Instagram_icon 1.png" alt=""></span>
+                    <span><img class="pro-icons"src="./pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
+                    <span><img class="pro-icons"src="./pages/images/rediit.png" alt=""></span>
+                    <span><img class="pro-icons"src="./pages/images/tiwtter.png" alt=""></span>
                 </div>
                 <button class="main-btn">Buy now</button>
             </div>
@@ -178,19 +178,19 @@
                 </div>
             </div>
             <div class="col-sm-auto col-md-6">
-                <img class="main-img img-fluid" src="../pages/images/aboutpagemainimg.png" alt="email-main-image" >
+                <img class="main-img img-fluid" src="./pages/images/aboutpagemainimg.png" alt="email-main-image" >
             </div>
         </div>
     </div>
     <div class="footer container">
-            <img  class="footer-img" src="../pages/images/navlogo.png" alt="">
+            <img  class="footer-img" src="./pages/images/navlogo.png" alt="">
             <p class="block">Copyright © 2023 CoverFeetAssociation, CoverFeet.org</p>
             <div class="profile-icons-footer">
-                <span><img class="footer-socials img-fluid" src="../pages/images/Gmail_Logo_512px 1.png" alt=""></span>
-                <span><img class="footer-social img-fluid" src="../pages/images/640px-Instagram_icon 1.png" alt=""></span>
-                <span><img class="footer-social img-fluid" src="../pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
-                <span><img class="footer-social img-fluid" src="../pages/images/rediit.png" alt=""></span>
-                <span><img class="footer-social img-fluid" src="../pages/images/tiwtter.png" alt=""></span>
+                <span><img class="footer-socials img-fluid" src="./pages/images/Gmail_Logo_512px 1.png" alt=""></span>
+                <span><img class="footer-social img-fluid" src="./pages/images/640px-Instagram_icon 1.png" alt=""></span>
+                <span><img class="footer-social img-fluid" src="./pages/images/Facebook_Logo_(2019) 1.png" alt=""></span>
+                <span><img class="footer-social img-fluid" src="./pages/images/rediit.png" alt=""></span>
+                <span><img class="footer-social img-fluid" src="./pages/images/tiwtter.png" alt=""></span>
             </div>
             <p class="hide">Copyright © 2023 CoverFeetAssociation, CoverFeet.org</p>
     </div> 
